<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/text_size_each_row"
    android:id="@+id/pharma_name_id"
    android:hint="@string/Pharmacy_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Pharmacy_number"
        android:id="@+id/pharma_number_id"
        android:textSize="@dimen/text_size_each_row"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pharma_address_id"
        android:textSize="@dimen/text_size_each_row"
        android:hint="@string/Pharmacy_address"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_Save_pharma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/btn_save" />

        <Button
            android:id="@+id/btn_cancel_pharma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:text="@string/btn_cancel"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_Save_pharma"
            android:layout_toEndOf="@+id/btn_Save_pharma" />
    </RelativeLayout>
</LinearLayout>