<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pooja.mediplusapp.Activity.Login">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title_login"
    android:textSize="@dimen/title_size"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:textColor="@color/title"
    android:background="@color/title_background"/>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_each_row"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_username"/>
        <EditText
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_each_row"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/enter_username"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_each_row"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_password"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_each_row"
            android:layout_height="wrap_content"
            android:id="@+id/enter_password"
            />
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_btn"
        android:id="@+id/login_button"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_newuser"
        android:layout_marginTop="20dp"
        android:id="@+id/text_register"
        android:textColor="#0000ff"
        android:textSize="@dimen/text_size_each_row"
        android:clickable="true"
        android:autoLink="all"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgot_password"
        android:textColor="#0000ff"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size_each_row"
        android:id="@+id/forgot_password"
        android:layout_gravity="center_horizontal"
        android:clickable="true"/>
<com.google.android.gms.common.SignInButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/sign_in_button">
</com.google.android.gms.common.SignInButton>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:id="@+id/linear_forgot_password"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading_forgot_pass"
            android:textSize="@dimen/sub_title_alarm_info"
            android:textColor="@color/title"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_forgot_code"
            android:hint="@string/enter_code"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btn_submit_forgot_code"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>
