<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_add_drug_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pooja.mediplusapp.Activity.AddDrugDetails">
<include
    android:id="@+id/toolbar_adddrug_activity"
    layout="@layout/toolbar_lay_out"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_background"
    android:textSize="@dimen/title_size"
    android:gravity="center_horizontal"
    style="@style/Base.TextAppearance.AppCompat.Large"
    android:textColor="@color/title"
    android:text="@string/Add_drugdetails"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_drug_name"
            android:text="@string/drug_name"
            android:textSize="18sp"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/border_style"
            android:id="@+id/enter_drugname"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_drug_desc"
            android:text="@string/drug_description"
            android:textSize="18sp"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/border_style"
            android:id="@+id/enter_drugdesc"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_drug_price"
            android:text="@string/drug_price"
            android:textSize="18sp"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/border_style"
            android:id="@+id/enter_drugprice"/>
    </LinearLayout>

    <TextView
        android:text="@string/type_of_drug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView_type_of_drug" />

    <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radio_category">

        <RadioButton
            android:text="@string/radio_generic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/radioButton_generic" />

        <RadioButton
            android:id="@+id/radioButton_specific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_specific" />
   </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/form_of_medication" />

    <Spinner
        android:id="@+id/spinner_form_of_medication"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:text="@string/Instructions"/>
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:id="@+id/spinner_instructions">
    </Spinner>
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>


</LinearLayout>
