<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pooja.mediplusapp.Activity.Edit_data">

<include
    layout="@layout/toolbar_lay_out"
    android:id="@+id/toolbar_edit_page"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:textSize="@dimen/title_size"
        android:gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/title"
        android:text="@string/Title_Edit_data"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/drug_name"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/border_style"
            android:id="@+id/edit_drug_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/drug_description"

            android:textSize="18sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/border_style"
            android:id="@+id/edit_drug_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/drug_price"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:background="@drawable/border_style"
            android:id="@+id/edit_drug_price" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_of_drug"
        android:textSize="18sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup_edit_catogory">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_generic"
            android:textSize="18sp"
            android:id="@+id/edit_radio_generic"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/radio_specific"
            android:id="@+id/edit_radio_specific"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_of_medication"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_spinner_mediform">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Instructions"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_information">
        </Spinner>
    </LinearLayout>

</LinearLayout>
