<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_ok"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_alignLeft="@+id/autoCompleteTextView"
        android:layout_alignStart="@+id/autoCompleteTextView" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel"
        android:layout_alignBaseline="@+id/button_ok"
        android:layout_alignBottom="@+id/button_ok"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:hint="@string/search_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:id="@+id/autoCompleteTextView"
        android:background="@drawable/border_style"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>