<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_alarm_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context="com.pooja.mediplusapp.Activity.Alarm_Activity">

    <include
        layout="@layout/toolbar_lay_out"
        android:id="@+id/toolbar_alarm"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Alarm_Title"
    android:gravity="center_horizontal"
    android:textSize="@dimen/title_size"
    android:textColor="@color/title"
    android:background="@color/title_background"
    />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/alarm_name"
    android:hint="@string/Alarm_name"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/enter_message"
          android:hint="Enter the message/medicine names here"
          />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_date"
                    android:text="@string/set_date"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_date"/>
            </LinearLayout>

            <DatePicker
                android:id="@+id/pickerdate"
                android:layout_width="wrap_content"
                android:datePickerMode="spinner"
                android:visibility="gone"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/set_time"
                    android:text="@string/set_time"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_time"/>
            </LinearLayout>
      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Everyday"
          android:id="@+id/everyday_checkbox"
          android:textSize="18sp"
          android:layout_marginTop="10dp"/>
            <TimePicker
                android:id="@+id/pickertime"
                android:timePickerMode="spinner"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/setalarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set Alarm"/>
            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
